--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -15,7 +15,7 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/atcrowdfunding-web/target/classes"/>
-        <property name="context-root" value="/"/>
+        <property name="context-root" value="atcrowdfunding-web"/>
         <!--   <property name="context-root" value="atcrowdfunding-web"/>-->
     </wb-module>
 </project-modules>
